--- a/ProyectoFinalLyA/Traductor.html
+++ b/ProyectoFinalLyA/Traductor.html
@@ -9,11 +9,12 @@
 </head>
 <body>
   <header>
-    <div class="logo-container">
-        <i class="fa-solid fa-circle-info"></i>
-        <span>Ayuda</span>
+    <div class="logo-container" id="helpBtn">
+      <i class="fa-solid fa-circle-info"></i>
+      <span>Ayuda</span>
     </div>
   </header>
+  
 
   <h1>Traductor de Texto a Binario y Binario a Texto</h1>
 
@@ -42,7 +43,6 @@
       </div>
     </div>    
   </div>
-
 
   <script src="trad.js"></script>
 </body>
