--- a/ProyectoFinalLyA/Traductor.html
+++ b/ProyectoFinalLyA/Traductor.html
@@ -13,8 +13,11 @@
       <i class="fa-solid fa-circle-info"></i>
       <span>Ayuda</span>
     </div>
+    <div class="logo-container" id="wordListBtn">
+      <i class="fa-solid fa-circle-info"></i>
+      <span>Palabras Admitidas</span>
+    </div>
   </header>
-  
 
   <h1>Traductor de Texto a Binario y Binario a Texto</h1>
 
@@ -28,8 +31,8 @@
       <div class="output-container">
         <textarea id="outputText" readonly placeholder="Resultado"></textarea>
       </div>
+      <p id="validationMessage"></p>
     </div>
-    
 
     <br><br>
     <div class="input-container">
@@ -41,6 +44,7 @@
       <div class="output-container">
         <textarea id="outputBinary" readonly placeholder="Resultado"></textarea>
       </div>
+      <p id="validationMessageBinary"></p>
     </div>    
   </div>
 
