--- a/ProyectoFinalLyA/Traductor.html
+++ b/ProyectoFinalLyA/Traductor.html
@@ -45,7 +45,18 @@
         <textarea id="outputBinary" readonly placeholder="Resultado"></textarea>
       </div>
       <p id="validationMessageBinary"></p>
-    </div>    
+    </div>
+  </div>
+
+  <div class="analysis-container">
+    <div class="analysis-section">
+      <h2>Análisis Léxico</h2>
+      <pre id="lexicalAnalysis"></pre>
+    </div>
+    <div class="analysis-section">
+      <h2>Análisis Sintáctico</h2>
+      <pre id="syntacticAnalysis"></pre>
+    </div>
   </div>
 
   <script src="trad.js"></script>
