--- a/ProyectoFinalLyA/Traductor.html
+++ b/ProyectoFinalLyA/Traductor.html
@@ -52,10 +52,12 @@
     <div class="analysis-section">
       <h2>Análisis Léxico</h2>
       <pre id="lexicalAnalysis"></pre>
+      <pre id="lexicalAnalysisCode"></pre>
     </div>
     <div class="analysis-section">
       <h2>Análisis Sintáctico</h2>
       <pre id="syntacticAnalysis"></pre>
+      <pre id="syntacticAnalysisCode"></pre>
     </div>
   </div>
 
